used reformat code from IntellIJ slightly improved plugins speed for commands permissions for plugins now actually work properly (fixed previous error)